--- a/app/src/main/res/layout/esterilizacion_datos_fragment.xml
+++ b/app/src/main/res/layout/esterilizacion_datos_fragment.xml
@@ -9,11 +9,11 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="182dp"
-        android:layout_height="121dp"
+        android:layout_width="226dp"
+        android:layout_height="158dp"
         android:layout_marginStart="114dp"
         android:layout_marginLeft="114dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="115dp"
         android:layout_marginRight="115dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,70 +25,74 @@
         android:id="@+id/anticipo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/amaranth_bold"
         android:text="Anticipo"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/faja2" />
+        app:layout_constraintTop_toBottomOf="@+id/faja" />
 
     <CheckBox
         android:id="@+id/faja"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginLeft="152dp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/amaranth_bold"
         android:text="Faja"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <CheckBox
-        android:id="@+id/faja2"
+        android:id="@+id/costo_extra_check"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginLeft="36dp"
+        android:layout_marginStart="64dp"
+        android:layout_marginLeft="64dp"
         android:layout_marginTop="24dp"
+        android:fontFamily="@font/amaranth_bold"
         android:text="Costo Extra"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/faja" />
-
-    <EditText
-        android:id="@+id/anticipo_cantidad"
-        android:layout_width="75dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginTop="20dp"
-        android:ems="10"
-        android:hint="$"
-        android:inputType="numberDecimal"
-        app:layout_constraintStart_toEndOf="@+id/anticipo"
-        app:layout_constraintTop_toBottomOf="@+id/costo_extra" />
+        app:layout_constraintTop_toBottomOf="@+id/anticipo" />
 
     <EditText
         android:id="@+id/costo_extra"
         android:layout_width="75dp"
         android:layout_height="41dp"
-        android:layout_marginStart="23dp"
-        android:layout_marginLeft="23dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="60dp"
         android:ems="10"
-        android:hint="$"
         android:inputType="numberDecimal"
-        app:layout_constraintStart_toEndOf="@+id/faja2"
-        app:layout_constraintTop_toBottomOf="@+id/precio" />
+        app:layout_constraintBottom_toTopOf="@+id/costo_total"
+        app:layout_constraintStart_toEndOf="@+id/costo_extra_check" />
 
     <EditText
-        android:id="@+id/precio"
+        android:id="@+id/anticipo_cantidad"
         android:layout_width="75dp"
         android:layout_height="41dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="$"
+        android:inputType="numberDecimal"
+        app:layout_constraintStart_toEndOf="@+id/anticipo"
+        app:layout_constraintTop_toBottomOf="@+id/faja" />
+
+    <EditText
+        android:id="@+id/precio"
+        android:layout_width="84dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:layout_marginTop="28dp"
+        android:ems="10"
         android:inputType="numberDecimal"
         app:layout_constraintStart_toEndOf="@+id/textView11"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
@@ -97,10 +101,13 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="128dp"
+        android:fontFamily="@font/amaranth_bold"
         android:text="Costo total:"
+        android:textColor="@color/black"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/anticipo" />
 
@@ -108,22 +115,24 @@
         android:id="@+id/costo_total"
         android:layout_width="193dp"
         android:layout_height="43dp"
-        android:layout_marginStart="11dp"
-        android:layout_marginLeft="11dp"
-        android:layout_marginTop="52dp"
-        android:text="@string/costo_total"
+        android:layout_marginStart="12dp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginTop="68dp"
         android:textSize="30dp"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/anticipo_cantidad" />
+        app:layout_constraintTop_toBottomOf="@+id/costo_extra_check" />
 
     <TextView
         android:id="@+id/textView11"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="52dp"
-        android:layout_marginLeft="52dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginLeft="104dp"
         android:layout_marginTop="36dp"
+        android:fontFamily="@font/amaranth_bold"
         android:text="Precio:"
+        android:textColor="@color/black"
+        android:textSize="25sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
