--- a/app/src/main/res/layout/gato_fragment.xml
+++ b/app/src/main/res/layout/gato_fragment.xml
@@ -26,15 +26,16 @@
         android:id="@+id/scrollView2"
         android:layout_width="fill_parent"
         android:layout_height="500dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
+            android:layout_marginStart="15dp"
             android:orientation="vertical">
 
             <Button
@@ -58,18 +59,20 @@
                 android:textColor="@color/grey"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/buscar_gato"
-                app:layout_constraintTop_toTopOf="parent"></TextView>
+                app:layout_constraintTop_toTopOf="parent">
+            </TextView>
 
 
             <TextView
                 android:id="@+id/textView12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="52dp"
-                android:layout_marginLeft="52dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginStart="64dp"
+                android:layout_marginLeft="64dp"
+                android:layout_marginTop="20dp"
                 android:text="Mes"
                 android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:fontFamily="sans-serif-thin"
                 app:layout_constraintStart_toEndOf="@+id/textView"
@@ -79,11 +82,12 @@
                 android:id="@+id/textView13"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="56dp"
-                android:layout_marginLeft="56dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="20dp"
                 android:text="Año"
                 android:textColor="@color/colorPrimary"
+                android:textSize="20sp"
                 android:textStyle="bold"
                 app:fontFamily="sans-serif-thin"
                 app:layout_constraintStart_toEndOf="@+id/textView12"
@@ -93,25 +97,25 @@
                 android:id="@+id/textView10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="30dp"
                 android:text="Procedencia:"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="25dp"
                 android:textStyle="bold"
-                app:fontFamily="@font/annie_use_your_telescope"
+                app:fontFamily="@font/amaranth_bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/condicion" />
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="59dp"
-                android:layout_height="33dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="94dp"
+                android:layout_height="35dp"
+                android:layout_marginTop="12dp"
                 android:text="Nombre:"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="25dp"
                 android:textStyle="bold"
-                app:fontFamily="@font/annie_use_your_telescope"
+                app:fontFamily="@font/amaranth_bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/buscar_gato" />
 
@@ -119,12 +123,12 @@
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="35dp"
                 android:text="Peso:"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="25dp"
                 android:textStyle="bold"
-                app:fontFamily="@font/annie_use_your_telescope"
+                app:fontFamily="@font/amaranth_bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
@@ -132,12 +136,12 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="35dp"
                 android:text="Sexo:"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="25dp"
                 android:textStyle="bold"
-                app:fontFamily="@font/annie_use_your_telescope"
+                app:fontFamily="@font/amaranth_bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -147,7 +151,7 @@
                 android:layout_height="41dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="10dp"
                 android:ems="10"
                 android:hint="Michi"
                 android:inputType="textPersonName"
@@ -160,7 +164,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="30dp"
                 android:orientation="horizontal"
                 app:layout_constraintStart_toEndOf="@+id/textView8"
                 app:layout_constraintTop_toBottomOf="@+id/mes_select">
@@ -171,14 +175,17 @@
                     android:layout_height="wrap_content"
                     android:text="Macho"
                     android:textColor="#29B6F6"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
                 <RadioButton
                     android:id="@+id/hembra"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:checked="true"
                     android:text="Hembra"
                     android:textColor="#EC407A"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
             </RadioGroup>
@@ -189,7 +196,7 @@
                 android:layout_height="38dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="30dp"
                 android:ems="10"
                 android:inputType="numberDecimal"
                 app:layout_constraintStart_toEndOf="@+id/textView9"
@@ -197,12 +204,12 @@
 
             <CheckBox
                 android:id="@+id/condicion_especial"
-                android:layout_width="171dp"
-                android:layout_height="28dp"
-                android:layout_marginTop="12dp"
-                android:fontFamily="@font/annie_use_your_telescope"
+                android:layout_width="232dp"
+                android:layout_height="33dp"
+                android:layout_marginTop="30dp"
+                android:fontFamily="@font/amaranth_bold"
                 android:text="Condicion Especial"
-                android:textSize="17dp"
+                android:textSize="23dp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/peso" />
@@ -227,30 +234,30 @@
                 android:layout_height="20dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="35dp"
                 app:layout_constraintStart_toEndOf="@+id/textView10"
                 app:layout_constraintTop_toBottomOf="@+id/condicion" />
 
             <NumberPicker
                 android:id="@+id/mes_select"
-                android:layout_width="74dp"
-                android:layout_height="36dp"
+                android:layout_width="96dp"
+                android:layout_height="61dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginLeft="30dp"
                 android:ems="10"
-                android:solidColor="@color/cardview_shadow_end_color"
+                android:solidColor="@color/withe"
                 android:textAllCaps="false"
                 app:layout_constraintStart_toEndOf="@+id/textView"
                 app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
             <NumberPicker
                 android:id="@+id/fecha_año_select"
-                android:layout_width="77dp"
-                android:layout_height="36dp"
+                android:layout_width="98dp"
+                android:layout_height="62dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginLeft="8dp"
                 android:ems="10"
-                android:solidColor="@color/cardview_shadow_end_color"
+                android:solidColor="@color/withe"
                 android:textAllCaps="false"
                 app:layout_constraintStart_toEndOf="@+id/mes_select"
                 app:layout_constraintTop_toBottomOf="@+id/textView13" />
@@ -259,7 +266,7 @@
                 android:id="@+id/formulario_responsable"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="30dp"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/responsable">
@@ -270,10 +277,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:fontFamily="@font/annie_use_your_telescope"
+                    android:fontFamily="@font/amaranth_bold"
                     android:text="Nombre:"
                     android:textColor="@color/black"
-                    android:textSize="20dp"
+                    android:textSize="25dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/datos_responsable" />
@@ -295,10 +302,10 @@
                     android:layout_width="126dp"
                     android:layout_height="30dp"
                     android:layout_marginTop="24dp"
-                    android:fontFamily="@font/annie_use_your_telescope"
+                    android:fontFamily="@font/amaranth_bold"
                     android:text="Apellido Paterno:"
                     android:textColor="@color/black"
-                    android:textSize="20dp"
+                    android:textSize="25dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView15" />
@@ -337,7 +344,7 @@
                     android:layout_marginRight="136dp"
                     android:text="Datos de Responsable"
                     android:textColor="@color/colorPrimary"
-                    android:textSize="20dp"
+                    android:textSize="25dp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.537"
@@ -349,10 +356,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="28dp"
-                    android:fontFamily="@font/annie_use_your_telescope"
+                    android:fontFamily="@font/amaranth_bold"
                     android:text="Apellido Materno:"
                     android:textColor="@color/black"
-                    android:textSize="20dp"
+                    android:textSize="25dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView16" />
@@ -397,10 +404,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="24dp"
-                    android:fontFamily="@font/annie_use_your_telescope"
+                    android:fontFamily="@font/amaranth_bold"
                     android:text="Celular:"
                     android:textColor="@color/black"
-                    android:textSize="20dp"
+                    android:textSize="25dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView18" />
@@ -410,10 +417,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    android:fontFamily="@font/annie_use_your_telescope"
+                    android:fontFamily="@font/amaranth_bold"
                     android:text="E-mail:"
                     android:textColor="@color/black"
-                    android:textSize="20dp"
+                    android:textSize="25dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView19" />
@@ -423,10 +430,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:fontFamily="@font/annie_use_your_telescope"
+                    android:fontFamily="@font/amaranth_bold"
                     android:text="Domicilio"
                     android:textColor="@color/black"
-                    android:textSize="20dp"
+                    android:textSize="25dp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView20" />
@@ -459,25 +466,27 @@
                 android:id="@+id/responsable"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/annie_use_your_telescope"
+                android:layout_marginTop="25dp"
+                android:fontFamily="@font/amaranth_bold"
                 android:text="Responsable"
                 android:textColor="@color/black"
-                android:textSize="17dp"
+                android:textSize="23dp"
                 android:textStyle="bold"
-                android:visibility="invisible"
+                android:visibility="gone"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="132dp"
-                android:layout_height="32dp"
-                android:layout_marginTop="30dp"
+                android:layout_width="140dp"
+                android:layout_height="64dp"
+                android:layout_marginTop="40dp"
                 android:fontFamily="@font/annie_use_your_telescope"
                 android:text="Fecha Nacimiento:"
                 android:textColor="@color/black"
-                android:textSize="20dp"
+                android:textSize="25dp"
                 android:textStyle="bold"
+                app:fontFamily="@font/amaranth_bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
