--- a/app/src/main/res/layout/material_list.xml
+++ b/app/src/main/res/layout/material_list.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/material_item"
     android:layout_height="wrap_content"
     android:background="@color/material"
     android:layout_marginBottom="3dp"
@@ -11,10 +12,11 @@
 
     <TextView
         android:id="@+id/nombreMaterial"
-        android:layout_width="223dp"
-        android:layout_height="33dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
+        android:layout_width="172dp"
+
+        android:layout_height="55dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:fontFamily="@font/alegreya_sans_extrabold"
@@ -24,6 +26,25 @@
         android:textSize="23dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/material_foto"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/cantidad_gastada"
+        android:visibility="gone"
+        android:layout_width="88dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginRight="3dp"
+        android:layout_marginBottom="24dp"
+        android:fontFamily="@font/alegreya_sans_extrabold"
+        android:gravity="center_vertical"
+        android:text="0/0"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="23dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
