--- a/app/src/main/res/layout/dialog_campania.xml
+++ b/app/src/main/res/layout/dialog_campania.xml
@@ -14,7 +14,7 @@
         android:layout_marginLeft="64dp"
         android:layout_marginTop="28dp"
         android:fontFamily="@font/alegreya_sans_extrabold"
-        android:text="@string/nombre"
+        android:text="@string/nombre_campa_a"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
