--- a/app/src/main/res/layout/gato_fragment.xml
+++ b/app/src/main/res/layout/gato_fragment.xml
@@ -45,6 +45,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/procedenciatext"
                 android:layout_width="133dp"
                 android:layout_height="31dp"
                 android:layout_marginStart="2dp"
